// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Feed Input Default 1`] = `
<div
  dir="ltr"
>
  <div
    aria-label="Feed input empty example"
    class="fd-feed-input"
    role="region"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-input__thumb"
      role="img"
      style="background-image: url('assets/images/avatars/4.svg')"
      title="John Doe"
    />
    
        
    <textarea
      aria-label="Feed message"
      class="fd-textarea fd-feed-input__textarea"
      placeholder="Post something here"
      required=""
      rows="1"
    />
    
        
    <button
      aria-disabled="true"
      aria-label="Send"
      class="fd-button fd-feed-input__submit-button"
      disabled=""
      title="Send"
    >
      
            
      <i
        class="sap-icon--feeder-arrow"
        role="presentation"
      />
      
        
    </button>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Feed Input Disabled 1`] = `
<div
  dir="ltr"
>
      
  <div
    aria-label="Feed input disabled example"
    class="fd-feed-input is-disabled"
    role="region"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-input__thumb"
      role="img"
      style="background-image: url('assets/images/avatars/4.svg')"
      title="John Doe"
    />
    
        
    <textarea
      aria-disabled="true"
      aria-label="Feed message"
      class="fd-textarea fd-feed-input__textarea"
      disabled=""
      placeholder="Post something here"
      required=""
      rows="1"
    >
      Disabled
    </textarea>
    
        
    <button
      aria-disabled="true"
      aria-label="Send"
      class="fd-button fd-feed-input__submit-button"
      disabled=""
      title="Send"
    >
      
            
      <i
        class="sap-icon--feeder-arrow"
        role="presentation"
      />
      
        
    </button>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Feed Input Generic thumbnail 1`] = `
<div
  dir="ltr"
>
      
  <div
    aria-label="Feed input empty example"
    class="fd-feed-input"
    role="region"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--placeholder sap-icon--person-placeholder fd-feed-input__thumb"
      role="img"
      title="John Doe"
    />
    
        
    <textarea
      aria-label="Feed message"
      class="fd-textarea fd-feed-input__textarea"
      placeholder="Post something here"
      required=""
      rows="1"
    >
      With generic user image
    </textarea>
    
        
    <button
      aria-label="Send"
      class="fd-button fd-feed-input__submit-button"
      title="Send"
    >
      
            
      <i
        class="sap-icon--feeder-arrow"
        role="presentation"
      />
      
        
    </button>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Feed Input Max height 1`] = `
<div
  dir="ltr"
>
      
  <div
    aria-label="Feed input over max height"
    class="fd-feed-input"
    role="region"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-input__thumb"
      role="img"
      style="background-image: url('assets/images/avatars/4.svg')"
      title="John Doe"
    />
    
        
    <textarea
      aria-label="Feed message"
      class="fd-textarea fd-feed-input__textarea"
      placeholder="Post something here"
      required=""
      rows="18"
    >
      X
X
X
X
X
X
X
X
X
X
X
X
X
X
X
X
X
X
X
X
    </textarea>
    
        
    <button
      aria-disabled="false"
      aria-label="Send"
      class="fd-button fd-feed-input__submit-button"
      title="Send"
    >
      
            
      <i
        class="sap-icon--feeder-arrow"
        role="presentation"
      />
      
        
    </button>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Feed Input Multiline 1`] = `
<div
  dir="ltr"
>
      
  <div
    aria-label="Feed input height growth"
    class="fd-feed-input"
    role="region"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-input__thumb"
      role="img"
      style="background-image: url('assets/images/avatars/4.svg')"
      title="John Doe"
    />
    
        
    <textarea
      aria-label="Feed"
      class="fd-textarea fd-feed-input__textarea"
      placeholder="Post something here"
      required=""
      rows="4"
    >
      With every line
"textarea" grows upward
until it reaches
the max height
    </textarea>
    
        
    <button
      aria-disabled="false"
      aria-label="Send"
      class="fd-button fd-feed-input__submit-button"
      title="Send"
    >
      
            
      <i
        class="sap-icon--feeder-arrow"
        role="presentation"
      />
      
        
    </button>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Feed Input No thumbnail 1`] = `
<div
  dir="ltr"
>
      
  <div
    aria-label="Feed input empty example"
    class="fd-feed-input"
    role="region"
  >
    
        
    <textarea
      aria-label="Feed message"
      class="fd-textarea fd-feed-input__textarea"
      placeholder="Post something here"
      required=""
      rows="1"
    >
      Without user image
    </textarea>
    
        
    <button
      aria-label="Send"
      class="fd-button fd-feed-input__submit-button"
      title="Send"
    >
      
            
      <i
        class="sap-icon--feeder-arrow"
        role="presentation"
      />
      
        
    </button>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Feed Input With text 1`] = `
<div
  dir="ltr"
>
      
  <div
    aria-label="Feed input with one row text"
    class="fd-feed-input"
    role="region"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-input__thumb"
      role="img"
      style="background-image: url('assets/images/avatars/4.svg')"
      title="John Doe"
    />
    
        
    <textarea
      aria-label="Feed message"
      class="fd-textarea fd-feed-input__textarea"
      placeholder="Post something here"
      required=""
      rows="1"
    >
      "When there is text, the submit button becomes active.
    </textarea>
    
        
    <button
      aria-disabled="false"
      aria-label="Send"
      class="fd-button
                fd-feed-input__submit-button"
      title="Send"
    >
      
            
      <i
        class="sap-icon--feeder-arrow"
        role="presentation"
      />
      
        
    </button>
    
    
  </div>
  

</div>
`;
